<resources>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="save_changes">Save Changes</string>
    <string name="next">Next</string>
    <string name="review">Review</string>
    <string name="add">Add</string>
    <string name="remove">Remove</string>
    <string name="error">ERROR</string>
    <string name="apartment_list">Apartment List</string>
    <string name="expense_list">Expense List</string>
    <string name="income_list">Income List</string>
    <string name="tenant_list">Tenant List</string>
    <string name="lease_list">Lease List</string>
    <string name="calendar">Calendar</string>
    <string name="totals">Totals</string>
    <string name="settings">Settings</string>
    <string name="calendar_date_view">Calendar Date View</string>
    <string name="apartment_view">Apartment View</string>
    <string name="tenant_view">Tenant View</string>
    <string name="lease_view">Lease View</string>
    <string name="expense_view">Expense View</string>
    <string name="income_view">Income View</string>
    <string name="new_tenant_creation">New Tenant Creation</string>
    <string name="edit_tenant">Edit Tenant</string>
    <string name="new_lease_creation">New Lease Creation</string>
    <string name="edit_lease">Edit Lease</string>
    <string name="new_expense_creation">New Expense Creation</string>
    <string name="edit_expense">Edit Expense</string>
    <string name="new_income_creation">New Income Creation</string>
    <string name="edit_income">Edit Income</string>
    <string name="new_apartment_creation">New Apartment Creation</string>
    <string name="edit_apartment">Edit Apartment</string>
    <string name="clear">Clear</string>
    <string name="cannot_be_empty">Cannot be empty</string>
    <string name="rentbud">RentalBud</string>
    <string name="rentbud_pro">RentalBud Pro</string>
    <string name="downloads">Downloads</string>
    <string name="rentbud_folder">RentalBud Folder</string>
    <string name="failed_to_save_image">Failed to save image</string>
    <string name="could_not_find_file">Could not find file</string>
    <string name="pic_limit">Cannot exceed 10 pictures</string>
    <string name="create">Create</string>
    <string name="cancel">Cancel</string>
    <string name="na">N/A</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="camera_or_gallery">Use a photo from your gallery, or take a new one with your camera?</string>
    <string name="ok">OK</string>
    <string name="to">to</string>
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="pass_rec_email_addr">noreply.rentbud@gmail.com</string>
    <string name="backup_file_name">RentalBudBackup</string>
    <string name="blank">&#160;</string>
    <string name="home">Home</string>
    <string name="expenses">Expenses</string>
    <string name="upcoming_events_tab_title">Upcoming Events</string>
    <string name="yearly_revenue_tab_title">Yearly Revenue</string>
    <string name="jan">JAN</string>
    <string name="feb">FEB</string>
    <string name="mar">MAR</string>
    <string name="apr">APR</string>
    <string name="may">MAY</string>
    <string name="jun">JUN</string>
    <string name="jul">JUL</string>
    <string name="aug">AUG</string>
    <string name="sep">SEP</string>
    <string name="oct">OCT</string>
    <string name="nov">NOV</string>
    <string name="dec">DEC</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="create_account_link"><u>No account yet? Create one</u></string>
    <string name="create_account">Create Account</string>
    <string name="already_a_member_link"><u>Already a member? Login</u></string>
    <string name="enter_valid_email">Please enter a valid Email address ex: user@provider.com</string>
    <string name="email_empty">Please enter a valid Email address</string>
    <string name="password_requirements">Password must be between 4 and 15 alphanumeric characters</string>
    <string name="password_empty">Please enter a password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="name">Name</string>
    <string name="name_empty">Please enter your name</string>
    <string name="password_doesnt_match">Password does not match</string>
    <string name="password_confirmation_empty">Please confirm password</string>
    <string name="email_used">Email already used</string>
    <string name="account_creation_failed">Account creation failed</string>
    <string name="account_creation_success">Account creation success</string>
    <string name="login_failed">Login failed</string>
    <string name="restore_accounts_with_backup"><u>Restore accounts with backup</u></string>
    <string name="creating_account">Creating Account…</string>
    <string name="forgot_password_link"><u>Forgot Password?</u></string>
    <string name="enter_account_email">Enter Account Email</string>
    <string name="no_account_for_email">No Account Registered With That Email</string>
    <string name="password_recovery_confirmation">Receive New Password Through Email?</string>
    <string name="recovery_email_subject">RentalBud account recovery</string>
    <string name="recovery_email_body">Your new password is:</string>
    <string name="recovery_email_body2">Password should be changed as soon as possible</string>
    <string name="recovery_error">An Error Occurred, Password Not Reset</string>
    <string name="cannot_recover_google_accounts">Cannot Recover Google Account Passwords</string>
    <string name="field_required">Field required</string>
    <string name="please_use_10_digit_phone">Please use a 10 digit phone number</string>
    <string name="info_tab_title">Info</string>
    <string name="payments_tab_title">Payments</string>
    <string name="lease_history_tab_title">History</string>
    <string name="leases_tab_title">Leases</string>
    <string name="apartment_deletion_confirmation">Are you sure you want to remove this apartment?</string>
    <string name="expense_deletion_confirmation">Are you sure you want to remove this expense?</string>
    <string name="income_deletion_confirmation">Are you sure you want to remove this income?</string>
    <string name="lease_deletion_confirmation">Are you sure you want to remove this lease?</string>
    <string name="lease_related_money_deletion_confirmation">"Remove all income/expenses related to this lease?"</string>
    <string name="tenant_deletion_confirmation">Are you sure you want to remove this tenant?</string>
    <string name="multiple_active_leases">Multiple Active Leases</string>
    <string name="error_loading_primary_tenant">Error Loading Primary Tenant</string>
    <string name="error_loading_apartment">Error Loading Apartment</string>
    <string name="error_leading_lease">Error Loading Lease</string>
    <string name="add_new_income_or_expense">Add new Income or Expense?</string>
    <string name="income">Income</string>
    <string name="expense">Expense</string>
    <string name="primary_tenant">Primary Tenant</string>
    <string name="secondary_tenant">Secondary Tenant</string>
    <string name="call_e_contact_confirmation">Call emergency contact?</string>
    <string name="sms_e_contact_confirmation">SMS emergency contact?</string>
    <string name="max_dates_range">Max range is 2 years</string>
    <string name="expense_information">Expense Information</string>
    <string name="linked_information">Linked Information</string>
    <string name="income_information">Income Information</string>
    <string name="apartment_information">Apartment Information</string>
    <string name="address">Address</string>
    <string name="active_lease_information">Active Lease Information</string>
    <string name="duration">Duration</string>
    <string name="call_primary_tenant">Call Primary Tenant</string>
    <string name="sms_primary_tenant">SMS Primary Tenant</string>
    <string name="email_primary_tenant">Email Primary Tenant</string>
    <string name="email_all_tenants">Email All Tenants</string>
    <string name="lease_information">Lease Information</string>
    <string name="tenant_information">Tenant Information</string>
    <string name="find_date">Find Date</string>
    <string name="go_to_today">Go To Today</string>
    <string name="key">Key</string>
    <string name="lease_begins">Lease Begins</string>
    <string name="lease_ends">Lease Ends</string>
    <string name="emer_contact_information">Emergency Contact Information</string>
    <string name="emer_contact_name">Emergency Contact Name</string>
    <string name="call_tenant">Call Tenant</string>
    <string name="sms_tenant">SMS Tenant</string>
    <string name="email_tenant">Email Tenant</string>
    <string name="call_emer_contact">Call Emergency Contact</string>
    <string name="sms_emer_contact">SMS Emergency Contact</string>
    <string name="status">Status</string>
    <string name="paid_received_only">Paid/Received Only</string>
    <string name="projected">Projected</string>
    <string name="permission_picture_denied">"You don't have permission to access file location"</string>
    <string name="permission_file_access_denied">"You don't have permission to access file location"</string>
    <string name="yearly_revenue">Yearly Revenue</string>
    <string name="upcoming_payments">Upcoming Payments</string>
    <string name="upcoming_lease_activities">Upcoming Lease Activities</string>
    <string name="main_drawer_home">Home</string>
    <string name="main_drawer_calendar">Calendar</string>
    <string name="main_drawer_apartments">Apartments</string>
    <string name="main_drawer_tenants">Tenants</string>
    <string name="main_drawer_leases">Leases</string>
    <string name="main_drawer_money_title">Money</string>
    <string name="main_drawer_income">Income</string>
    <string name="main_drawer_expenses">Expenses</string>
    <string name="main_drawer_totals">Totals</string>
    <string name="edit_notes">Edit Notes</string>
    <string name="change_main_picture">Change Main Picture</string>
    <string name="add_side_picture">Add Side Picture</string>
    <string name="delete_apartment">Delete Apartment</string>
    <string name="edit">Edit</string>
    <string name="change_receipt_picture">Change Receipt Picture</string>
    <string name="delete_expense">Delete Expense</string>
    <string name="delete_income">Delete Income</string>
    <string name="delete_lease">Delete Lease</string>
    <string name="log_out">Log Out</string>
    <string name="remove_image">Remove Image</string>
    <string name="change_image">Change Image</string>
    <string name="delete_tenant">Delete Tenant</string>
    <string name="change_income_status">Mark Received/Unreceived</string>
    <string name="change_expense_status">Mark Paid/Unpaid</string>
    <string name="change_status">Change Status</string>
    <string name="create_apartment">Create Apartment</string>
    <string name="edit_apt_info">Edit Apt. Info</string>
    <string name="select_an_apartment">Select An Apartment</string>
    <string name="no_available_apartments">No Available Apartments</string>
    <string name="address_line_1">Address Line 1</string>
    <string name="address_line_2">Address Line 2</string>
    <string name="city">City</string>
    <string name="state">State/Province</string>
    <string name="zip">ZIP</string>
    <string name="description">Description</string>
    <string name="notes">Notes</string>
    <string name="main_pic">Main Picture</string>
    <string name="number_of_side_pics">Number Of Side Pictures</string>
    <string name="other_tenants">Other Tenants</string>
    <string name="payment_frequency">Payment Frequency</string>
    <string name="due_date">Due Date</string>
    <string name="rent">Rent</string>
    <string name="phone">Phone</string>
</resources>