<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <!--Main fragment selection -->
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/main_drawer_home" />

        <item
            android:id="@+id/nav_calendar"
            android:icon="@drawable/ic_event_black_24dp"
            android:title="@string/main_drawer_calendar" />

        <item
            android:id="@+id/nav_apartment"
            android:icon="@drawable/ic_business_black_24dp"
            android:title="@string/main_drawer_apartments" />

        <item
            android:id="@+id/nav_tenant"
            android:icon="@drawable/ic_person_black_24dp"
            android:title="@string/main_drawer_tenants" />

        <item
            android:id="@+id/nav_lease"
            android:icon="@drawable/ic_business_center_black_24dp"
            android:title="@string/main_drawer_leases" />

    </group>


    <item android:title="@string/main_drawer_money_title">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_income"
                    android:icon="@drawable/ic_attach_money_green_24dp"
                    android:title="@string/main_drawer_income" />

                <item
                    android:id="@+id/nav_expenses"
                    android:icon="@drawable/ic_money_off_black_24dp"
                    android:title="@string/main_drawer_expenses" />

                <item
                    android:id="@+id/nav_totals"
                    android:icon="@drawable/ic_folder_special_black_24dp"
                    android:title="@string/main_drawer_totals" />
            </group>
        </menu>
    </item>
</menu>
