<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >
    <item
        android:id="@+id/action_refresh_info"
        android:icon="@drawable/ic_edit_white_24dp"
        android:title=""
        app:showAsAction="always">

        <!--Options list -->
        <menu>
            <item
                android:id="@+id/editIncome"
                android:title="@string/edit_income" />

            <item
                android:id="@+id/editReceiptPic"
                android:title="@string/change_receipt_picture" />

            <item
                android:id="@+id/changeStatus"
                android:title="@string/change_income_status" />

            <item
                android:id="@+id/deleteIncome"
                android:title="@string/delete_income" />

        </menu>

    </item>
</menu>