<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical"
        android:id="@+id/adViewLL"
        >
    <View
        android:id="@+id/apartmentListBarBorder"
        android:layout_width="match_parent"
        style="@style/RowBorder" />

        <!-- TODO add ID for release -->
    <com.google.android.gms.ads.AdView xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:id="@+id/adView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        ads:adSize="BANNER"
        ads:adUnitId="" />

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/adViewLL"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center">


                <!-- Was 200dp X 200dp -->
                <ImageView
                    android:id="@+id/apartmentViewMainPicIV"
                    android:layout_width="200dp"
                    android:layout_height="200dp"
                    android:scaleType="fitXY"
                    android:src="@drawable/blank_home_pic" />
            </LinearLayout>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/recyclerView"
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="15dp"
                android:orientation="horizontal">

            </android.support.v7.widget.RecyclerView>

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    style="@style/ViewInformationRowHeaderTextStyle"
                    android:text="@string/apartment_information" />

                <!--Address -->
                <TableRow
                    style="@style/ViewInformationRowStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/apartmentAddressLabelTextView"
                        style="@style/ViewInformationRowLeftTextStyle"
                        android:text="@string/address" />

                    <TextView
                        android:id="@+id/apartmentViewAddressTextView"
                        style="@style/ViewInformationRowRightTextStyle"
                        android:text="2390 Burlington Rd" />

                </TableRow>

                <!--Description -->
                <TableRow
                    style="@style/ViewInformationRowStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/apartmentViewDescriptionLabelTextView"
                        style="@style/ViewInformationRowLeftTextStyle"
                        android:text="@string/description" />

                    <TextView
                        android:id="@+id/apartmentViewDescriptionTextView"
                        style="@style/ViewInformationRowRightTextStyle"
                        android:text="The description" />

                </TableRow>

                <TextView
                    android:id="@+id/apartmentViewActiveLeaseHeaderTV"
                    style="@style/ViewInformationRowHeaderTextStyle"
                    android:text="@string/active_lease_information" />

                <!--Active Lease Duration -->
                <TableRow
                    android:id="@+id/apartmentViewActiveLeaseDurationTR"
                    style="@style/ViewInformationRowStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/apartmentViewActiveLeaseDurationLabelTextView"
                        style="@style/ViewInformationRowLeftTextStyle"
                        android:text="@string/duration" />

                    <TextView
                        android:id="@+id/apartmentViewActiveLeaseDurationTextView"
                        style="@style/ViewInformationRowRightTextStyle"
                        android:text="11/12/1221 - 11/12/1222" />

                </TableRow>

                <!--Active Lease Primary Tenant -->
                <TableRow
                    android:id="@+id/apartmentViewActiveLeasePrimaryTenantTR"
                    style="@style/ViewInformationRowStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/apartmentViewActiveLeasePrimaryTenantLabelTextView"
                        style="@style/ViewInformationRowLeftTextStyle"
                        android:text="@string/primary_tenant" />

                    <TextView
                        android:id="@+id/apartmentViewActiveLeasePrimaryTenantTextView"
                        style="@style/ViewInformationRowRightTextStyle"
                        android:text="Frank Lascelles" />

                </TableRow>

                <!--Active Lease Other Tenants -->
                <TableRow
                    android:id="@+id/apartmentViewActiveLeaseOtherTenantsTR"
                    style="@style/ViewInformationRowStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/apartmentViewActiveLeaseOtherTenantsLabelTextView"
                        style="@style/ViewInformationRowLeftTextStyle"
                        android:text="@string/other_tenants" />

                    <TextView
                        android:id="@+id/apartmentViewActiveLeaseOtherTenantsTextView"
                        style="@style/ViewInformationRowRightTextStyle"
                        android:text="Bill Clinton" />

                </TableRow>

                <TextView
                    style="@style/ViewInformationRowHeaderTextStyle"
                    android:text="@string/notes" />

                <!--Notes -->
                <TableRow
                    style="@style/ViewInformationRowStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="40dp">

                    <TextView
                        android:id="@+id/apartmentViewNotesTextView"
                        style="@style/ViewInformationRowRightTextStyle"
                        android:layout_weight="3"
                        android:text="The notes" />

                </TableRow>

            </TableLayout>


            <Button
                android:id="@+id/apartmentViewCallTenantBtn"
                style="@style/ContactButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_call_black_24dp"
                android:text="@string/call_primary_tenant" />

            <Button
                android:id="@+id/apartmentViewSMSTenantBtn"
                style="@style/ContactButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_textsms_black_24dp"
                android:text="@string/sms_primary_tenant" />


            <Button
                android:id="@+id/apartmentViewEmailTenantBtn"
                style="@style/ContactButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_email_black_24dp"
                android:text="@string/email_primary_tenant" />

            <Button
                android:id="@+id/apartmentViewEmailAllTenantsBtn"
                style="@style/ContactButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_email_black_24dp"
                android:text="@string/email_all_tenants" />

            <View
                android:layout_width="match_parent"
                android:layout_height="20dp" />

        </LinearLayout>
    </ScrollView>
</RelativeLayout>

